@@ -5,6 +5,9 @@ Updated search button style
 Added welcome text section for new DISCOVER
 Updated welcome text section styles
 Removed Generator link
+Added DISCOVER filter header
+Minor css changes
+Cleaned up feedback link
 
 
 Development Portal (2016-11-22 shi)
